--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body oncontextmenu="return false;">
     <div class="container">
-        <img src="img/01.png" alt="">
+        <img src="./img/01.png" alt="">
     </div>
     <audio id="esquerdo" src="sons/bongo0.mp3"></audio>
     <audio id="direito" src="sons/bongo1.mp3"></audio>
